discussion/kv_engine/101421/101421_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

Refactor: Move ConnNotifier into separate file

Change-Id: I088172721ed21a913a46737f3dd46e3d931dba45

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Daniel Owen
Date: 2018-11-06 10:40:24.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-11-06 11:09:11.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/12121/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/12121/ )

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5012/ : FAILURE

Failure of a GoogleTest  ( http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5012/ )

Failure of a CTest test 140/161 Test #142: memcached_testapp.ep.CleanOrUnclean/PersistToTest ............................ ( http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5012/ )

Timeout of a CTest test 161/161 Test #133: memcached_testapp.ep.TransportProtocols/ExternalAuthTest .....................} ( http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5012/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/11785/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/13072/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv-engine-cv-perf/5315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-ASan-UBSan-master/2779/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/13512/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2018-11-06 11:56:11.000000000
Message: 
Patch Set 2: Verified+1

Build Successful 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/11785/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format/12124/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-linux-master/13072/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv-engine-cv-perf/5315/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-ASan-UBSan-master/2779/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/13512/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-threadsanitizer-master/5015/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-06 13:05:01.000000000
Message: 
Patch Set 2: Code-Review-1

(3 comments)
Line:37, engines/ep/src/conn_notifier.cc -> Don't need `void` in C++ for empty argument lists.

Is this an overridden method? If so please add `override` (same for getDescription).

Line:22, engines/ep/src/conn_notifier.h -> Do you need "connmap.h" here? Would a forward declaration of ConnMap suffice?

Line:33, engines/ep/src/conn_notifier.h -> Might as well de-inline the constructor; it's not like we create / destroy these objects that frequently...

----------------------------------------------------------------------------------------------------------------------
Author: Daniel Owen
Date: 2018-11-06 14:18:10.000000000
Message: 
Patch Set 2:

(3 comments)
Line:37, engines/ep/src/conn_notifier.cc -> Done

Line:22, engines/ep/src/conn_notifier.h -> Unfortunately need to include, otherwise get the following error:

In file included from /Users/owend/master/kv_engine/engines/ep/src/conn_notifier.cc:18:
/Users/owend/master/kv_engine/engines/ep/src/conn_notifier.h:31:34: error: unknown template name 'enable_shared_from_this'
class ConnNotifier : public std::enable_shared_from_this<ConnNotifier> {
                                 ^
/Users/owend/master/kv_engine/engines/ep/src/conn_notifier.cc:66:35: error: use of undeclared identifier 'shared_from_this'
            &connMap.getEngine(), shared_from_this());
                                  ^
2 errors generated.

Line:33, engines/ep/src/conn_notifier.h -> Done

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2018-11-06 14:21:21.000000000
Message: 
Patch Set 2:

(1 comment)
Line:22, engines/ep/src/conn_notifier.h -> Well, that issue is that you don't have shared_from_this<> present; which IIRC lives in <memory> - and highlights a  header you are currently getting "for free" from connmap.h ;)

----------------------------------------------------------------------------------------------------------------------
Author: Daniel Owen
Date: 2018-11-06 14:46:42.000000000
Message: 
Patch Set 2:

(1 comment)
Line:22, engines/ep/src/conn_notifier.h -> Ah thanks - should have read the error message in more detail!
Have fixed.

----------------------------------------------------------------------------------------------------------------------
